# car-rental-system

./: .env.example  .gitignore  docker-compose.yml
car-rental-backend/: .dockerignore  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt  uvicorn_config.yaml
car-rental-backend/alembic/: env.py
car-rental-backend/alembic/versions/: 2e6bec086e2f_init_empty_baseline.py  a1b2c3d4e5f6_add_is_verified_to_users.py  b3c4d5e6f7a8_add_categories_and_update_vehicles.py  c4d5e6f7a8b9_add_reservations_rentals_and_price_breakdowns.py  d5e6f7a8b9c0_add_profile_fields_to_users.py
car-rental-backend/app/: config.py  main.py
car-rental-backend/app/core/: deps.py  email.py  exceptions.py  security.py  token_blacklist.py  user_cache.py  utils.py
car-rental-backend/app/db/: __init__.py  base.py  engine.py  mongodb.py  redis.py  session.py
car-rental-backend/app/models/: __init__.py  category.py  rental.py  user.py  vehicle.py
car-rental-backend/app/repositories/: rental_repository.py  reservation_repository.py  user_repository.py  vehicle_repository.py
car-rental-backend/app/routers/: admin.py  auth.py  rentals.py  reservations.py  users.py  vehicles.py
car-rental-backend/app/schemas/: auth.py  rental.py  reservation.py  user.py  vehicle.py
car-rental-backend/scripts/: seed.py
car-rental-backend/tests/: conftest.py  test_auth_router.py  test_auth_service.py  test_deps.py  test_health.py  test_security.py  test_token_blacklist.py  test_user_cache.py  test_vehicle_router.py  test_vehicle_service.py  test_vehicles_router.py
car-rental-frontend/: Dockerfile  (+6 more)
(+185 files in other folders)
